<resources>
    <string name="app_name">ToDoApp_Trial1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_acc">Create Account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_pass">enter your password</string>
    <string name="re_enter_your_pass">Re-enter_your_pass</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in">Sign In</string>
</resources>